--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,17 @@ h3 {
 	top: 55px;
 	left: 100px;
 }
+@media only screen and (min-width: 380px){
+	.container {
+	width: 380px;
+    margin: auto;	
+    }
+	#tehran {
+	position: absolute;
+	top: 65px;
+	left: 140px;
+}
+}
 @media only screen and (min-width: 500px){
 	.container {
 	width: 500px;
@@ -60,5 +71,16 @@ h3 {
 	position: absolute;
 	top: 90px;
 	left: 180px;
+}
+}
+@media only screen and (min-width: 600px){
+	.container {
+	width: 600px;
+    margin: auto;	
+    }
+	#tehran {
+	position: absolute;
+	top: 110px;
+	left: 215px;
 }
 }
